# Derivator

./: CMakeLists.txt  README.md
assets/dot/: sample_derivated.dot  sample_derivated_raw.dot  sample_original.dot
assets/input/: bibubig.txt
include/: derivator.h  simplifier.h
include/ast/: node.h  node_macros.h  tree.h
include/frontend/: lexer.h  parser.h
include/output/: dump.h
src/: derivator.c  main.c  simplifier.c
src/ast/: node.c  tree.c
src/frontend/: lexer.c  parser.c
src/output/: dump.c
